Update SIEL template and css to workaround the pdf rendering issue
Weasyprint cannot break and render an element properly if it spans over a
page. Fortunately the tables are getting rendered correctly - if any part of the
table row crosses a page then the complete row is getting moved to the next page
which is fine. However if the row in some cases if the row content is too long
and emdedded under a single div (in case of SIEL licence document it is the
terms and conditions section) then the content is getting truncated and not
being rendered.

To workaround this, the content is included in multiple top level div elements.
In this case atmost the content in last div gets pushed to the next page. This
is a workaround and may need further work if it fails in any other sections.

--- a/assets/css/siel.css
+++ b/assets/css/siel.css
@@ -92,9 +92,55 @@
   page-break-after: always;
 }
 .document .terms-and-conditions-heading {
+  padding-left: 10px;
   padding-bottom: 15px;
   text-decoration: underline;
 }
 .document .terms-and-conditions-paragraph {
+  padding-left: 10px;
+  padding-right: 10px;
   padding-bottom: 15px;
+}
+
+.terms-and-conditions-paragraph-div {
+  padding: 0px;
+  margin: 0px;
+  width: 90.6%;
+  float: right;
+  border-left: solid 1px black;
+  border-right: solid 1px black;
+  border-bottom: none;
+}
+
+.terms-and-conditions-paragraph-last-div {
+  padding: 0px;
+  margin: 0px;
+  width: 90.6%;
+  float: right;
+  border-left: solid 1px black;
+  border-right: solid 1px black;
+  border-bottom: solid 1px black;
+}
+
+#terms-and-conditions-table-last-row {
+  border-left: 1px solid black;
+  border-right: 1px solid black;
+  border-bottom: none;
+}
+
+table.print-friendly tr td,
+table.print-friendly tr th {
+  page-break-inside: avoid;
+}
+
+#paragraph_content_div {
+  padding: 0px;
+  margin: 0px;
+  width: 91%;
+  border: solid 1px black;
+  float: right;
+}
+
+.document>p {
+  margin-bottom: 0px;
 }
